TG-98: fix contrast color on sidebar currentlink text

--- a/src/Components/Shared/Sidebar/sidebar.module.css
+++ b/src/Components/Shared/Sidebar/sidebar.module.css
@@ -59,6 +59,7 @@
 
 .currentLink li {
   background-color: #49A37B;
+  color: white;
 }
 
 @media only screen and (min-width: 768px) {
